--- a/SajermannSendEmail/TemplateSajermannSendEmail/Template1.html
+++ b/SajermannSendEmail/TemplateSajermannSendEmail/Template1.html
@@ -8,6 +8,8 @@
 </head>
 <body id="body" style="background-color: #FFFFFF;">
   <div>
+    <h1>Template 1</h1>
+    <p>{{this.item}}</p>
     {{this.name}}
   </div>
 </body>
